--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -10,7 +10,7 @@
 .dashboard {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100dvh;
   background-color: var(--color-black);
 }
 
