--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  min-height: 100vh;
+  min-height: 100dvh;
   padding: 1rem;
   background-color: var(--color-black);
 }
